Fix facet wrapping/hyphenation in Firefox

--- a/app/assets/stylesheets/blacklight/_facets.scss
+++ b/app/assets/stylesheets/blacklight/_facets.scss
@@ -36,12 +36,12 @@
 
 .facet-values {
   display: table;
+  table-layout: fixed;
   width: 100%;
 
   li {
 
     display: table-row;
-
     .selected {
       @extend .text-success;
     }
@@ -65,10 +65,9 @@
 
   @mixin hyphens-auto {
     // breaks long words apart so they don't cause the containing div to
-    // be too big
-    // from http://kenneth.io/blog/2012/03/04/word-wrapping-hypernation-using-css/
-    -ms-word-break: break-all;
-    word-break: break-all;
+    // be too big, also fix hypenation
+    -ms-word-break: keep-all;
+    word-break: keep-all;
 
     // Non standard for webkit
     word-break: break-word;
@@ -76,24 +75,23 @@
     -webkit-hyphens: auto;
     -moz-hyphens: auto;
     -ms-hyphens: auto;
+    -o-hyphens: auto;
     hyphens: auto;
   }
 
   .facet-label {
     display: table-cell;
     padding-right: 1em;
-
     text-indent: -15px;
     padding-left: 15px;
     padding-bottom: $padding-base-vertical;
-
     @include hyphens-auto;
   }
 
   .facet-count {
     display: table-cell;
-    vertical-align: top;
     text-align: right;
+    width: 5em;
   }
 }
 
